--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 
-  <title>{{ page.title }} | {{site.name}}</title>
+  <!--<title>{{ page.title }} | {{site.name}}</title>-->
 
   {% seo %}
 
@@ -77,6 +77,10 @@ ga('send', 'pageview');
 
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/submit-whatsapp-group">Submit WhatsApp Group</a>
                 </li>
 
                 {% include search-lunr.html %}
