--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html lang="{{ page.lang | default: site.lang | default: "en-US" }}">
 
-  <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
-
-  <!--<title>{{ page.title }} | {{site.name}}</title>-->
-
-  {% seo %}
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
-  <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
-
-  <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
-
-  <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-
-</head>
-
-{% if jekyll.environment == 'production' %}
-<!-- change your GA id in _config.yml -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', '{{site.google_analytics}}', 'auto');
-ga('send', 'pageview');
-</script>
-{% endif %}
-
-{% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
+  {% include head.html %}
 <body class="{{layout}}">
 	<!-- defer loading of font and font awesome -->
 	<noscript id="deferred-styles">
