--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,11 +18,7 @@ post_class: post-template
 
                 <!-- Post Title -->
                 <h1 class="posttitle">{{ page.title }} | 
-                  {% if page.last_modified_at %}
-                    {{ page.last_modified_at | date: "%B %Y" }}
-                  {% else %}
-                    {{ page.date | date: "%B %Y" }}
-                  {% endif %}
+                  {% include month_year_string.html %} 
                 </h1>
 
             </div>
@@ -177,20 +173,15 @@ post_class: post-template
 <!-- Review with LD-JSON, adapt it for your needs if you like, but make sure you test the generated HTML source code first: 
 https://search.google.com/structured-data/testing-tool/u/0/
 ================================================== -->
-<!-- NOTE - This script tag does not override the json-ld data dumped by the seo plugin
-  TODO - get rid of the seo plugin after implementing all the features it provides, essentially define all tags in a file in _includes and include it at the right place. 
--->
-
-<!--{% if page.rating %}-->
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
-  "@type": "BlogPosting2",
-  "headline": "{{ page.title }} | {{ page.date | date:"%m %Y" }}",
+  "@type": "BlogPosting",
+  "headline": "{{ page.title }} | {% include month_year_string.html %}",
   "image": "{{ site.baseurl }}/{{ post.image }}",
   "publisher": {
     "@type": "Organization",
-    "name" "WhatsApp Groups",
+    "name": "WhatsApp Groups",
     "logo": {
 			"@type": "ImageObject",
       "url": "{{ site.baseurl }}/{{ site.logo }}",
@@ -198,21 +189,15 @@ https://search.google.com/structured-data/testing-tool/u/0/
       "width": "60"
     }
   },
+  "mainEntityOfPage": {
+     "@type": "WebPage",
+     "@id": "{{ page.url | prepend: site.url }}"
+  },
   "datePublished": "{{ page.date | date:"%Y-%m-%d" }}",
   "dateModified": "{{ page.last_modified_at | date:"%Y-%m-%d" }}",
   "author": {
     "@type": "Person",
     "name": "{{ author.display_name }}"
-  },
-  "reviewRating": {
-    "@type": "Rating",
-    "ratingValue": "{{ page.rating }}",
-    "bestRating": "5"
-  },
-  "itemReviewed": {
-    "@type": "Thing",
-    "name": "{{ page.title }}"
   }
 }
 </script>
-<!--{% endif %}-->
