--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,8 +17,7 @@ post_class: post-template
             <div class="mainheading">
 
                 <!-- Post Title -->
-                <h1 class="posttitle">{{ page.title }} | 
-                  {% include month_year_string.html %} 
+                <h1 class="posttitle">{{ page.title }}  
                 </h1>
 
             </div>
