--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
 
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script> 
 
-{% if page.layout == 'post' %}
+{% if page.layout == 'post' and page.comments == true %}
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
 
