--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,10 +1,8 @@
-
-@font-face {
-  font-display: swap;
-  font-weight: normal;
-  font-style: normal;
-}
-
+/* 
+Template Name: Mediumish 
+Copyright: Sal, WowThemes.net, https://www.wowthemes.net 
+License: https://www.wowthemes.net/freebies-license/ 
+*/
 @media screen and (min-width:1500px) {
     html { font-size:17px; } /* Increase the font size on higher resolutions */
     .container {max-width:70%;}
