--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -311,7 +311,7 @@ span.post-read-more a:hover {
 }
 
 .mainheading h1.sitetitle {
-    font-family: Righteous;
+    font-family: Righteous, sans-serif;
 }
 
 .mainheading h1.posttitle {
@@ -336,7 +336,7 @@ span.post-read-more a:hover {
 }
 
 .article-post {
-    font-family: Merriweather;
+    font-family: Merriweather, sans-serif;
     font-size: 1.1rem;
     line-height: 1.84;
     color: rgba(0, 0, 0, .8);
