--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
   {% include head.html %}
 
 <body class="{{layout}}">
+	<!-- defer loading of font and font awesome -->
+	<noscript id="deferred-styles">
+	  <link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+	</noscript>
+
 
 <!-- Begin Menu Navigation
 ================================================== -->
