--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -11,7 +11,7 @@
                 {% endfor %}
             {% else %}
                 {% for tag in tags_list %}
-                <li><a class="m-3" href="{{site.baseurl}}/tags#{{ tag[0] | url_escape | strip | replace: ' ', '-' }}">{{ tag[0] | camelcase }} ({{ tag[1].size }})</a></li>
+                <li class="mt-3 mb-4"><a class="m-3 p-3" href="{{site.baseurl}}/tags#{{ tag[0] | url_escape | strip | replace: ' ', '-' }}">{{ tag[0] | camelcase }} ({{ tag[1].size }})</a></li>
                 {% endfor %}
             {% endif %}
             {% assign tags_list = nil %}
