--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,11 @@
 <body class="{{layout}}">
 	<!-- defer loading of font and font awesome -->
 	<noscript id="deferred-styles">
-		<link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	</noscript>
+		<link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+    <!-- font awesome
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	  -->
+  </noscript>
 
 
 <!-- Begin Menu Navigation
@@ -107,7 +109,7 @@
                   Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
               </div>
               <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                  <a target="_blank" href="https://www.whatsappgroups.app">WhatsApp Group Invite Links</a> by WhatsAppGroups.app
+                <a target="_blank" href="{{ site.baseurl }}" rel="noreferrer">WhatsApp Group Invite Links</a> by WhatsAppGroups.app
               </div>
           </div>
       </div>
