changes to update redirection logic

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,13 +9,12 @@ post_class: post-template
 <!-- Begin Article
 ================================================== -->
 <div>
-		      <script type ="text/javascript" src = "{{ site.baseurl }}/assets/js/deals.js"></script>
 	  
     <div id="post_loader" style="display:none">
       loader
     </div>
 
-    <div class="row"  id="post_post" style="display:none">
+    <div class="row"  id="post_post" style="display:block">
 
         <!-- Post -->
         {% assign author = site.authors[page.author] %}
