--- a/_includes/head.html
+++ b/_includes/head.html
@@ -111,6 +111,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
   <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+ 
+  {% if page.redirect == true %}
+    <script type ="text/javascript" src = "{{ site.baseurl }}/assets/js/deals.js"></script>
+  {% endif %}
+
   <script async src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 </head>
 {% if jekyll.environment == 'production' %}
