changed to reviewindex post testing

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,7 @@ post_class: post-template
 ================================================== -->
 <div>
 	  
-    <div id="post_loader" style="display:none">
-      loader
-    </div>
-
-    <div class="row"  id="post_post" style="display:block">
+    <div class="row">
 
         <!-- Post -->
         {% assign author = site.authors[page.author] %}
