--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -3,7 +3,7 @@
         <h2><span>All Tags</span></h2>
     </div>
 		<div class="align-self-center pl-0">
-      <ul class="tags mb-4">
+      <ul class="tags">
             {% assign tags_list = site.tags %}
             {% if tags_list.first[0] == null %}
                 {% for tag in tags_list %}
@@ -11,7 +11,7 @@
                 {% endfor %}
             {% else %}
                 {% for tag in tags_list %}
-                <li class="mt-3 mb-4"><a class="m-3 p-3" href="{{site.baseurl}}/tags#{{ tag[0] | url_escape | strip | replace: ' ', '-' }}">{{ tag[0] | camelcase }} ({{ tag[1].size }})</a></li>
+                <li class="mt-2 mb-3"><a class="m-2 p-2" href="{{site.baseurl}}/tags#{{ tag[0] | url_escape | strip | replace: ' ', '-' }}">{{ tag[0] | camelcase }} ({{ tag[1].size }})</a></li>
                 {% endfor %}
             {% endif %}
             {% assign tags_list = nil %}
