--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,19 +80,19 @@
  
     <!-- Bottom Alert Bar
     ================================================== -->
-    {% if site.mailchimp-list %}
-    <div class="alertbar">
-    	<div class="container text-center">
-    		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
-            <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
-                <div class="mc-field-group">
-                <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-                <input type="submit" value="Subscribe" name="subscribe" class="heart">
-                </div>
-            </form>
+    <div class="alertbar bg-green">
+    	<div class="container text-center pointer">
+        <a href="https://play.google.com/store/apps/details?id=com.vaaniapp.groupsapp" target="__blank">
+          <div class="alertbar-content">
+    		
+            <div class="mr-2 v-center fc-white"> <b> Download App.</b> Unlimited WhatsApp Groups.</div>
+            <div class="playstore-image flex">
+              <img class="v-center mh-100" src="{{ site.baseurl }}/assets/images/playstore.png" alt="Download Android App">
+            </div>
+          </div>
+        </a>
     	</div>
     </div>
-    {% endif %}
    
     <!-- Tags
     ================================================== -->
