--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -327,7 +327,7 @@ span.post-read-more a:hover {
     font-size: 0.8rem;
     color: rgba(0, 0, 0, .44);
     margin-top: 50px;
-    margin-bottom: 62px;
+    margin-bottom: 100px;
     position: relative;
     background: #fff;
 }
@@ -407,40 +407,16 @@ blockquote {
         height: 359px;
     }
 
-    .alertbar {
-        position: relative !Important;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        box-shadow: none !Important;
-        padding-right: 14px !Important;
-    }
-
+    .alertbar-content{
+        font-size: 0.9em;
+    } 
+  
     #comments {
         margin-right: 15px;
     }
 
     .jumbotron.fortags {
         margin-bottom: 0 !Important;
-    }
-
-    .alertbar form {
-        margin-top: 20px;
-    }
-
-    .alertbar span,
-    .alertbar form {
-        display: block;
-    }
-
-    .alertbar input[type="submit"] {
-        border-radius: 3px !Important;
-    }
-
-    .alertbar input[type="email"] {
-        margin-right: 0px !Important;
-        display: block;
-        border-right: 1px solid #ddd !Important;
-        margin-bottom: 10px;
     }
 
     .jumbotron {
@@ -463,7 +439,6 @@ blockquote {
 
     .footer {
         margin-top: 0px;
-        margin-bottom: 0px;
     }
 }
 
@@ -570,22 +545,6 @@ ul.tags li a:hover {
     display: none;
 }
 
-.alertbar form {
-    display: inline-block;
-}
-
-.alertbar input[type="email"] {
-    font-size: 0.85rem;
-    padding: 3px 5px 3px 10px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border: 1px solid #ddd;
-    border-right: 0;
-    margin-right: -10px;
-    height: 34px;
-    letter-spacing: 0.5px;
-    margin-left: 5px;
-}
 
 .alertbar input[type="submit"] {
     background-color: #1C9963;
@@ -602,6 +561,12 @@ ul.tags li a:hover {
     letter-spacing: 0.5px;
     cursor: pointer;
 }
+
+.alertbar-content {
+  display: inline-flex;
+}
+
+    
 
 .form-control::-webkit-input-placeholder {
     color: rgba(0, 0, 0, .5);
@@ -869,6 +834,11 @@ iframe {
     top: 80px;
 }
 
+.playstore-image {
+  height: 4.5em;
+}
+
+
 .spoiler {
     color: transparent;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -928,3 +898,19 @@ iframe {
     white-space: -o-pre-wrap; /* Opera 7 */    
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+/* common */
+.in-flex { display: inline-flex; }
+.flex { display: flex; }
+
+.v-center { align-self: center; }  /* parent needs to be flex */
+.h-center { text-align: center; }
+
+.mh-100 { max-height: 100%; }
+
+.fs-09 {  font-size: 0.9em; }
+.fc-white { color: white; }
+
+.bg-green { background: #00ab6b; }
+
+.pointer { cursor: pointer; }
