download app button in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,13 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/submit-whatsapp-group">Submit WhatsApp Group</a>
+                <a class="nav-link" href="{{ site.baseurl }}/submit-whatsapp-group">Submit Group</a>
                 </li>
+                
+                <li class="nav-item">
+                <a class="btn btn-success" href="https://play.google.com/store/apps/details?id=com.vaaniapp.groupsapp" target="__blank">Download App</a>
+                </li>
+                
                 <!--
                 {% include search-lunr.html %}
                 -->
