find group changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,9 @@
 <div class="site-content">
 
   <div class="container">
-  
+
+   {% include groups-list.html %} 
+ 
     <!-- Content
     ================================================== -->
     <div class="main-content">
