--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,9 @@ post_class: post-template
 <!-- Begin Article
 ================================================== -->
 <div>
-	  
+
+    {% include groups-list.html %}
+ 
     <div class="row">
 
         <!-- Post -->
