--- a/_includes/groups-list.html
+++ b/_includes/groups-list.html
@@ -14,7 +14,9 @@ float:left;
 margin-right: 10px;
 }
 #divElement{
-padding: 10px;
+  padding: 10px;
+  text-align:center;
+  margin: 10px 0;
 }
 </style>
 
@@ -46,7 +48,7 @@ function ga_tracking(href)
 </script>
 
 <!--<script type ="text/javascript" src="../assets/js/group-search.js"><script/> -->
-<div id = "divElement" class="listfeaturedtag" style="text-align: center">
+<div id = "divElement" class="listfeaturedtag">
   <div style="display:inline-flex">
   <select id="selectBox" class="form-control">
     <option value="" hidden>Any Category</option>
