--- a/_includes/submit-group-form.html
+++ b/_includes/submit-group-form.html
@@ -1,5 +1,5 @@
 <form action="" id="group-form" method="POST">    
-  <p class="mb-4">Please submit your WhatsApp Group Link. We will add it to our lists as soon as possible!</p>
+  <p class="mb-4">Please submit your Group Link. We will add it to our lists as soon as possible!</p>
   <div class="form-group row">
     <div class="col-md-6 mb-3">
       <input class="form-control" type="text" name="group-name" id="group-name" placeholder="Group Name*" required>
