--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
         <a href="https://storage.googleapis.com/grouplist/app-release.apk" target="__blank">
           <div class="alertbar-content">
     		
-            <div class="mr-2 v-center fc-white"> <b> Download App.</b> Unlimited WhatsApp Groups.</div>
+            <div class="mr-2 v-center fc-white"> <b> Download App.</b> Better Groups than WhatsApp.</div>
             <div class="playstore-image flex">
               <img class="v-center mh-100" src="{{ site.baseurl }}/assets/images/playstore.png" alt="Download Android App">
             </div>
