updated app link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
                 </li>
                 
                 <li class="nav-item">
-                <a class="btn btn-success" href="https://storage.googleapis.com/grouplist/app-release.apk" target="__blank">Download App</a>
+                <a class="btn btn-success" href="https://play.google.com/store/apps/details?id=app.getboss.messenger" target="__blank">Download App</a>
                 </li>
                 
                 <!--
@@ -87,7 +87,7 @@
     ================================================== -->
     <div class="alertbar bg-green">
     	<div class="container text-center pointer">
-        <a href="https://storage.googleapis.com/grouplist/app-release.apk" target="__blank">
+        <a href="https://play.google.com/store/apps/details?id=app.getboss.messenger" target="__blank">
           <div class="alertbar-content">
     		
             <div class="mr-2 v-center fc-white"> <b> Download App.</b> Better Groups than WhatsApp.</div>
