added creative below title

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,18 @@ post_class: post-template
             {% endif %}
             <!-- End Adsense -->
 
+            <!-- Static Boss App Creative  -->
+            {% if site.lazyimages == "enabled" %}
+            <a href="https://play.google.com/store/apps/details?id=app.getboss.messenger" target="_blank">
+              <img style="width: 100%; margin-top:2em; margin-bottom:2em" src="{{ site.baseurl }}/assets/images/promo_creative_1.png" alt="creative">
+            </a>
+            {% else %}
+            <a href="https://play.google.com/store/apps/details?id=app.getboss.messenger" target="_blank">
+              <img style="width: 100%; margin-top:2em; margin-bottom:2em" src="{{ site.baseurl }}/assets/images/promo_creative_1.png" alt="creative">
+            </a>
+            {% endif %}
+
+
             <!-- Summary -->
             {% if page.summary %}
             <p class="post-summary">
